--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 GlobalDefaultGameMode="/Script/Farming_Tower.Farming_TowerGameMode"
-GameInstanceClass=/Script/Farming_Tower.GameManager
+GameInstanceClass=/Game/TopDown/Blueprints/BP_GameManager.BP_GameManager_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
