--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GlobalDefaultGameMode="/Script/Farming_Tower.Farming_TowerGameMode"
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GameInstanceClass=/Game/TopDown/Blueprints/BP_GameManager.BP_GameManager_C
 
 [/Script/Engine.RendererSettings]
